Always show y-scrollbar to avoid layout shift

--- a/src/app.css
+++ b/src/app.css
@@ -25,4 +25,8 @@
 			local('Inter'),
 			url('/fonts/Inter.woff2') format('woff2');
 	}
+
+	body {
+		overflow-y: scroll;
+	}
 }
